tests/snapshots/snapshots__budget_ini_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (512 words)

.eslintrc.js
     7→const localConfigs = readdir(__dirname)
     8→  .filter((file) => file.startsWith('.eslintrc.local.'))
     9→  .map((file) => `./${file}`)
CHANGELOG.md
     1→# Changelog
     2→
     3→## [6.0.0](https://github.com/npm/ini/compare/v5.0.0...v6.0.0) (2025-10-22)
     4→### ⚠️ BREAKING CHANGES
     5→* `ini` now supports node `^20.17.0 || >=22.9.0`
     6→### Bug Fixes
     7→* [`6d395a4`](https://github.com/npm/ini/commit/6d395a4aaf7d7a5e32e250809cb7bd04c6a27b66) [#291](https://github.com/npm/ini/pull/291) align to npm 11 node engine range (#291) (@owlstronaut)
     8→### Chores
     9→* [`23a36a9`](https://github.com/npm/ini/commit/23a36a9ca194d97486ed367f63d13a2cde1d1ce5) [#290](https://github.com/npm/ini/pull/290) bump @npmcli/template-oss from 4.26.0 to 4.27.1 (#290) (@dependabot[bot], @npm-cli-bot)
      →…
    11→## [5.0.0](https://github.com/npm/ini/compare/v4.1.3...v5.0.0) (2024-09-03)
    12→### ⚠️ BREAKING CHANGES
    13→* `ini` now supports node `^18.17.0 || >=20.5.0`
    14→### Bug Fixes
    15→* [`3eca645`](https://github.com/npm/ini/commit/3eca645de8586b8349acd79211b01a9199d8fd32) [#279](https://github.com/npm/ini/pull/279) align to npm 10 node engine range (@hashtagchris)
    16→### Chores
    17→* [`c89e209`](https://github.com/npm/ini/commit/c89e2090d7989bb91255ec46eaaf5f8cb1c34b34) [#279](https://github.com/npm/ini/pull/279) run template-oss-apply (@hashtagchris)
      →…
    22→## [4.1.3](https://github.com/npm/ini/compare/v4.1.2...v4.1.3) (2024-05-22)
    23→
    24→### Bug Fixes
    25→
    26→* [`858cc82`](https://github.com/npm/ini/commit/858cc82dff7eac9ff9a56181132d66d0e09a803c) [#252](https://github.com/npm/ini/pull/252) decoding bracketed arrays (#252) (@Cherry)
    27→
    28→### Chores
    29→
      →…
    34→## [4.1.2](https://github.com/npm/ini/compare/v4.1.1...v4.1.2) (2024-03-04)
    35→
    36→### Bug Fixes
    37→
    38→* [`e237377`](https://github.com/npm/ini/commit/e237377029caa6fe76b1290eb6e64247e3e11cf3) [#243](https://github.com/npm/ini/pull/243) Removed the unused doUnesc param in the unsafe function (#243) (@LoicE5)
    39→
    40→### Documentation
    41→
      →…
    46→### Chores
    47→
      →…
    63→## [4.1.1](https://github.com/npm/ini/compare/v4.1.0...v4.1.1) (2023-05-16)
    64→
    65→### Bug Fixes
    66→
    67→* [`090f64e`](https://github.com/npm/ini/commit/090f64e92a7ff722adf723dc13e7b468e591f057) [#208](https://github.com/npm/ini/pull/208) check process on browser (#208) (@Creskendoll)
    68→
    69→## [4.1.0](https://github.com/npm/ini/compare/v4.0.0...v4.1.0) (2023-04-13)
    70→
    71→### Features
    72→
    73→* [`622106a`](https://github.com/npm/ini/commit/622106a1a0bcd2bc32bfd2e6f9cc45a1a1cb53f7) [#205](https://github.com/npm/ini/pull/205) add "align" and "sort" options (#205) (@rquadling)
    74→* [`dc64a1a`](https://github.com/npm/ini/commit/dc64a1a3aa322c0c258383bedcae738aaa67028d) [#204](https://github.com/npm/ini/pull/204) add bracketedArray option (#204) (@wraithgar)
    75→* [`6a3cb38`](https://github.com/npm/ini/commit/6a3cb38b134f674dff1a7b5d3732553e8bace777) [#199](https://github.com/npm/ini/pull/199) add platform option to force line endings (#199) (@wraithgar, Francois-Xavier Kowalski)
      →…
    78→### Bug Fixes
    79→
      →…
    84→## [4.0.0](https://github.com/npm/ini/compare/v3.0.1...v4.0.0) (2023-03-08)
    85→
    86→### ⚠️ BREAKING CHANGES
    87→
    88→* `ini` is now compatible with the following semver range for node: `^14.17.0 || ^16.13.0 || >=18.0.0`
    89→
    90→### Features
    91→
      →…
    94→## [3.0.1](https://github.com/npm/ini/compare/v3.0.0...v3.0.1) (2022-08-22)
    95→
      →…
    97→### Bug Fixes
    98→
    99→* linting ([#166](https://github.com/npm/ini/issues/166)) ([5d9ab39](https://github.com/npm/ini/commit/5d9ab392643a93358e1d7595e8efb3d6d97d1181))
   100→
   101→## [3.0.0](https://github.com/npm/ini/compare/v2.0.1...v3.0.0) (2022-04-05)
   102→
      →…
   104→### ⚠ BREAKING CHANGES
   105→
   106→* this drops support for node 10 and non-LTS versions of node 12 and node 14
   107→
   108→### Bug Fixes
   109→
      →…
   113→### Dependencies
   114→
      →…
CONTRIBUTING.md
     3→# Contributing
     4→
     5→## Code of Conduct
     6→
     7→All interactions in the **npm** organization on GitHub are considered to be covered by our standard [Code of Conduct](https://docs.npmjs.com/policies/conduct).
     8→
     9→## Reporting Bugs
    10→
      →…
    17→## Pull Request Conventions
    18→
    19→### Commits
    20→
    21→We use [Conventional Commits](https://www.conventionalcommits.org/en/v1.0.0/).
    22→
    23→When opening a pull request please be sure that either the pull request title, or each commit in the pull request, has one of the following prefixes:
      →…
    30→### Test Coverage
    31→
      →…
    36→### Linting
    37→
      →…
    42→## What _not_ to contribute?
    43→
    44→### Dependencies
    45→
    46→It should be noted that our team does not accept third-party dependency updates/PRs.  If you submit a PR trying to update our dependencies we will close it with or without a reference to these contribution guidelines.
    47→
    48→### Tools/Automation
    49→
      →…
README.md
     4→## Note
     5→
      →…
    10→## Usage
    11→
      →…
    82→## API
    83→
    84→### Parse
    85→
    86→Attempts to turn the given INI string into a nested data object.
    87→
    88→```js
      →…
    93→### Stringify
    94→
      →…
   167→### Un / Escape
   168→
      →…
lib/ini.js
     3→const encode = (obj, opt = {}) => {
    80→function splitSections (str, separator) {
   106→const decode = (str, opt = {}) => {
   212→const isQuoted = val => {
   217→const safe = val => {
   230→const unsafe = val => {
