tests/snapshots/snapshots__budget_ini_level1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 20 → level 2 (13 words)

ini.js
     3→const encode
    80→function splitSections
   106→const decode
   212→const isQuoted
   217→const safe
   230→const unsafe
