tests/snapshots/snapshots__budget_ini_level3.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 50 → level 8 (42 words)

ini.js
     3→const encode = (obj, opt = {}) => {
    80→function splitSections (str, separator) {
   106→const decode = (str, opt = {}) => {
   212→const isQuoted = val => {
   217→const safe = val => {
   230→const unsafe = val => {
