tests/snapshots/snapshots__budget_ini_root_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 10 → level 0 (8 words)

.commitlintrc.js
.eslintrc.js
CHANGELOG.md
CODE_OF_CONDUCT.md
CONTRIBUTING.md
README.md
SECURITY.md
lib/ini.js
